# primalscheme2

./: .gitignore  README.md  pool_split.shell  pyproject.toml
output/: scheme.insert.bed  scheme.primer.bed
primaldeep/: config.py  dna.py  exceptions.py  interactions.py  main.py  overlap.py  parsers.py  primer.py  region.py  scheme.py  types.py  utils.py
primalscheme/: config.py  datauri.py  dna.py  exceptions.py  interactions.py  jackhammer.py  main.py  overlap.py  primer.py  scheme.py
primalscheme/templates/: report_template.html
tests/: test_primaldeep.py
tests/inputs/: 20up_input.fasta  8_variant_mask.fa
