[tool.poetry]
name = "primaldeep"
version = "0.1.0"
description = ""
authors = ["Josh Quick <j.quick@bham.ac.uk>", "Andrew Smith <andysmith.d@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
primer3-py = "^0.6.1"
tqdm = "^4.62.3"
parasail = "^1.2.4"
biopython = "^1.79"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.812"
black = "^21.5b1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
primaldeep = 'primaldeep.main:main'